# nrf91-rust

./: Cargo.toml  memory.x  memory_ns.x  nrf91_notes.txt  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs  modem.rs
