[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "embassy-nrf-examples"
version = "0.1.0"


[dependencies]
embassy = { version = "0.1.0", path = "../embassy/embassy", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["nightly", "defmt", "nrf9160-ns", "time-driver-rtc1", "gpiote", "unstable-pac"] }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }