[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "embassy-nrf-examples"
version = "0.1.0"


[dependencies]
embassy-executor = { version = "0.3.0", path = "../embassy/embassy-executor", features = ["nightly", "defmt", "arch-cortex-m", "executor-thread"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["nightly", "defmt", "nrf9160-ns", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-sync = { version = "0.3.0", path = "../embassy/embassy-sync", features = ["nightly", "defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
