[package]
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
edition = "2018"
name = "embassy-nrf-examples"
version = "0.1.0"

[features]
default = ["defmt"]

[dependencies]
embassy-executor = { version = "0.3.0", path = "../embassy/embassy-executor", features = ["nightly", "defmt", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["nightly", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.1.0", path = "../embassy/embassy-nrf", features = ["nightly", "defmt", "nrf9160-s", "time-driver-rtc1", "gpiote", "unstable-pac"] }
embassy-sync = { version = "0.3.0", path = "../embassy/embassy-sync", features = ["nightly", "defmt"] }
embassy-futures = { version = "0.1.0", path = "../embassy/embassy-futures", features = ["defmt"] }
embassy-net-driver-channel = { version = "0.2.0", path = "../embassy/embassy-net-driver-channel"}

defmt = { version = "0.3", optional = true }
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
static_cell = { version = "1.2.0", features = ["nightly"] }

[profile.dev]
debug = 2
debug-assertions = true
incremental = true
opt-level = 's'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false